# astro-airflow-mcp

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  pyproject.toml
src/astro_airflow_mcp/clients/airflow_v2/: README.md  pyproject.toml
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/api/config/: get_config.py  get_value.py
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/api/connection/: delete_connection.py  get_connection.py  get_connections.py  patch_connection.py  post_connection.py  test_connection.py
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/api/dag/: delete_dag.py  get_dag.py  get_dag_details.py  get_dag_source.py  get_dags.py  get_task.py  get_tasks.py  patch_dag.py  patch_dags.py  post_clear_task_instances.py  post_set_task_instances_state.py
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/api/dag_run/: clear_dag_run.py  delete_dag_run.py  get_dag_run.py  get_dag_runs.py  get_dag_runs_batch.py  get_upstream_dataset_events.py  post_dag_run.py  set_dag_run_note.py  update_dag_run_state.py
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/api/dag_warning/: get_dag_warnings.py
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/api/dataset/: create_dataset_event.py  delete_dag_dataset_queued_event.py  delete_dag_dataset_queued_events.py  delete_dataset_queued_events.py  get_dag_dataset_queued_event.py  get_dag_dataset_queued_events.py  get_dataset.py  get_dataset_events.py  get_dataset_queued_events.py  (+1 more)
src/astro_airflow_mcp/clients/airflow_v2/airflow_v2_client/models/: __init__.py  action.py  action_collection.py  action_resource.py  basic_dag_run.py  class_reference.py  clear_dag_run.py  clear_task_instances.py  collection_info.py  config.py  config_option.py  config_section.py  connection.py  connection_collection.py  connection_collection_item.py  connection_test.py  create_dataset_event.py  create_dataset_event_extra_type_0.py  cron_expression_type_0.py  dag.py  dag_collection.py  dag_detail.py  dag_detail_dataset_expression_type_0.py  dag_detail_params.py  dag_processor_status.py  dag_run.py  dag_run_collection.py  dag_run_conf.py  dag_schedule_dataset_reference.py  dag_warning.py  dag_warning_collection.py  dataset.py  dataset_collection.py  dataset_event.py  dataset_event_collection.py  dataset_event_extra_type_0.py  dataset_extra_type_0.py  error.py  event_log.py  event_log_collection.py  (+57 more)
(+341 files in other folders)
