[project]
name = "airflow-mcp"
version = "0.1.0"
description = "A FastMCP server for Airflow integration that can run standalone or as an Airflow 3 plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
plugin = [
    "apache-airflow>=3.0.0",
    "fastapi>=0.100.0",
]

[project.scripts]
airflow-mcp = "airflow_mcp.__main__:main"

[project.entry-points."airflow.plugins"]
airflow_mcp = "airflow_mcp.plugin:AirflowMCPPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/airflow_mcp"]

[tool.hatchling.build.targets.wheel.force-include]
"src/airflow_mcp/templates" = "airflow_mcp/templates"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG001", "ARG002"]  # Allow unused arguments in tests

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert_used check (common in tests)
